# test

./: CMakeLists.txt  Common.h  IPCManager.cpp  IPCManager.h  Logger.cpp  Logger.h  ProcessManager.cpp  ProcessManager.h  ProcessManager_gb2312.cpp  README.md  ServiceManager.cpp  ServiceManager.h  SingleInstance.cpp  SingleInstance.h  UpgradeLog.htm  Utils.cpp  Utils.h  WindowsService.cpp  WindowsService.h  WindowsService_gb2312.cpp  WinlogonService.cpp  WinlogonService.h  install_service.bat.in  main.cpp  service.sln  service.vcproj  service.vcxproj  uninstall_service.bat.in
Backup/: service.sln
Release/: BuildLog.htm  check_service.bat  clean_service.bat  debug_service.bat  fix_service.bat  fix_service_config.bat  force_clean.bat  install_service.bat  restart_install.bat  service.exe.recipe  service.iobj  service.ipdb  service.vcxproj.FileListAbsolute.txt  simple_install.bat  test_service.bat  ultimate_fix.bat  解决方案指南.txt
Release/service.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  service.lastbuildstate
